# PictorusDemo

./: Cargo.toml  settings.gradle.kts
app/: Cargo.toml  build.gradle.kts
app/src/: main.rs
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  example_app.c  example_app_crashmodel.c  lib.rs  native-lib.cpp  pictorus.h  pictorus_crashmodel.h
app/src/main/java/in/matter/pictorusdemo1/: MainActivity.kt  SimulationModelAppInterface.kt  SimulationModelAppInterfaceCrashModel.kt
app/src/main/jniLibs/arm64-v8a/: CMakeLists.txt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
corelib-traits/: Cargo.toml
corelib-traits-testing/: Cargo.toml
corelib-traits-testing/src/: lib.rs
corelib-traits/src/: alloc_impls.rs  hal.rs  lib.rs  sealed.rs  transition_impls.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
pictorus-core-blocks/: Cargo.toml
pictorus-core-blocks/src/: abs_block.rs  adc_block.rs  aggregate_block.rs  app_time_block.rs  arg_min_max_block.rs  bias_block.rs  bit_shift_block.rs  bitwise_operator_block.rs  bytes_join_block.rs  bytes_literal_block.rs  bytes_pack_block.rs  bytes_split_block.rs  bytes_unpack_block.rs  change_detection_block.rs  clamp_block.rs  compare_to_value_block.rs  comparison_block.rs  constant_block.rs  counter_block.rs  cross_product_block.rs  dac_block.rs  deadband_block.rs  delay_block.rs  delay_control_block.rs  derivative_block.rs  determinant_block.rs  dot_product_block.rs  exponent_block.rs  fix_non_finite_block.rs  frequency_filter_block.rs  gain_block.rs  gpio_output_block.rs  i2c_input_block.rs  i2c_output_block.rs  iir_filter_block.rs  integral_block.rs  json_dump_block.rs  json_load_block.rs  lib.rs  logical_block.rs  (+35 more)
pictorus-core-blocks/src/product_block/: component.rs  matrix.rs
pictorus-core-blocks/src/traits/: serialize.rs
pictorus-nalgebra-interop/: Cargo.toml
pictorus-nalgebra-interop/src/: lib.rs
pictorus-std-blocks/: Cargo.toml
pictorus-std-blocks/src/: fft_block.rs  lib.rs  system_time_block.rs
pictorus_traits/: Cargo.toml
pictorus_traits/src/: lib.rs
protocols/: Cargo.toml
protocols/src/: lib.rs
rust_code_gen/: Cargo.toml
rust_code_gen/src/: blocks.rs  byte_data.rs  data_logger.rs  lib.rs  stale_tracker.rs  thread_manager.rs  timing.rs  traits.rs
rust_code_gen/src/blocks/: app_time_block.rs  bitwise_operator_block.rs  bytes_join_block.rs  bytes_pack_block.rs  bytes_split_block.rs  bytes_unpack_block.rs  can_receive_block.rs  can_transmit_block.rs  change_detection_block.rs  character_display_block.rs  component_input_block.rs  component_output_block.rs  constant_block.rs  data_read_block.rs  data_write_block.rs  deadband_block.rs  delay_block.rs  delay_control_block.rs  derivative_block.rs  determinant_block.rs  dot_product_block.rs  equation_block.rs  exponent_block.rs  fft_block.rs  fmu_block.rs  frequency_filter_block.rs  gain_block.rs  gpio_input_block.rs  gpio_output_block.rs  histogram_plot_block.rs  i2c_input_block.rs  i2c_output_block.rs  iir_filter_block.rs  inspect_block.rs  integral_block.rs  json_dump_block.rs  json_load_block.rs  lib_cam_block.rs  logical_block.rs  lookup_1d_block.rs  (+36 more)
rust_code_gen/src/loggers/: csv_logger.rs  linux_logger.rs  mod.rs  rtt_logger.rs  udp_logger.rs
utils/: Cargo.toml
utils/src/: block_data.rs  block_ops.rs  byte_data.rs  execution_controller.rs  lib.rs  runtime_context.rs  stale_tracker.rs  timing.rs  utils.rs
