[package]
name = "counter_68059cc7b7d81834df67e279"
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
corelib-traits = { path = "../corelib-traits" }
embedded-io = "0.6.1"
linux-protocols = { path = "../platforms/linux" }
log = "0.4.21"
pictorus-core-blocks = { path = "../pictorus-core-blocks" }
pictorus-std-blocks = { path = "../pictorus-std-blocks" }
protocols = { path = "../protocols" }
rust_code_gen = { path = "../rust_code_gen" }
signal-hook = "0.3.14"
std-embedded-time = "0.1.0"

[build-dependencies]

[features]
default = [ "rust_code_gen/can", "protocols/can",]
sim = [ "rust_code_gen/sim",]
