[package]
name = "protocols"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
embedded-can = "0.4.1"
embedded-hal = "1.0.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = [ "unproven",] }
embedded-io = "0.6.1"
embedded-time = "0.12.1"
mockall = { version = "0.12.1", optional = true }
nb = "1.1.0"

[features]
default = [ "std",]
std = []
can = []
fdcan = []
test-utils = [ "mockall", "std",]
adc = []
dac = []
