[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
pretty_assertions = "1.4.0"
temp-env = "0.3"

[dependencies]
cfg-if = "1.0.0"
approx = "0.5.1"
num-traits = { version = "0.2.18", default-features = false, features = [ "libm",] }
log = "0.4.21"
miniserde = { version = "0.1.38", default-features = false }
nalgebra = { version = "0.32.4", default-features = false, features = [ "alloc", "libm",] }
strum = { version = "0.26.1", default-features = false, features = [ "derive",] }
pictorus_traits = { path = "../pictorus_traits", version = "0.2.0" }
corelib-traits = { path = "../corelib-traits", features = [ "alloc",] }

[features]
std = [ "nalgebra/std", "miniserde/std",]
traits_0_1 = []
