[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
pretty_assertions = "1.4.0"
temp-env = "0.3"

[dependencies]
cfg-if = "1.0.0"
approx = "0.5.1"
num-traits = { version = "0.2.18", default-features = false, features = [ "libm",] }
log = "0.4.21"
miniserde = { version = "0.1.38", default-features = false }
nalgebra = { version = "0.33.2", default-features = false, features = [ "alloc", "libm",] }
strum = { version = "0.26.1", default-features = false, features = [ "derive",] }
pictorus_traits = { path = "../pictorus_traits", version = "0.2.0" }
corelib-traits = { path = "../corelib-traits" }
embedded-time = "0.12.1"
byteorder = { version = "1.4.3", default-features = false }
embedded-hal = "1.0.0"

[features]
std = [ "nalgebra/std", "miniserde/std",]
traits_0_1 = []
